experiment 9 making storyImage fixed on mobile

--- a/style.css
+++ b/style.css
@@ -35,12 +35,10 @@ h2 {
 
 #bgImage {
     position: fixed;
-    left: 50%;
-    top: 50%;
+    z-index: -1;
     width: 100lvw;
     height: 100lvh;
-    transform: translate(-50%, -50%);
-    z-index: -1;
+    bottom: 0px;
 }
 
 .wrap {
